--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </ul>
     </div>
     <div id="home">
-        <img src="svg_files/ll_logo.svg" style="width:100%; height:auto;" alt="ll_logo">
+        <img src="ll_logo.svg" style="width:100%; height:auto;" alt="ll_logo">
     </div>
 
     <div id="home" class="video-container">
@@ -66,19 +66,19 @@
         </p>
         <div style="padding:2%">
             <div>
-                <img src="svg_files/english.svg" class="image" alt="sf" style="margin-left:10%; margin-top:3%" />
-                <img src="svg_files/telugu.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
-                <img src="svg_files/hindi.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
+                <img src="english.svg" class="image" alt="sf" style="margin-left:10%; margin-top:3%" />
+                <img src="telugu.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
+                <img src="hindi.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
             </div>
             <div>
-                <img src="svg_files/kannada.svg" class="image" alt="sf" style="margin-left:10%; margin-top:3%" />
-                <img src="svg_files/tamil.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
-                <img src="svg_files/malayalam.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
+                <img src="kannada.svg" class="image" alt="sf" style="margin-left:10%; margin-top:3%" />
+                <img src="tamil.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
+                <img src="malayalam.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
             </div>
             <div>
-                <img src="svg_files/bangla.svg" class="image" alt="sf" style="margin-left:10%; margin-top:3%" />
-                <img src="svg_files/marathi.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
-                <img src="svg_files/japanese.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
+                <img src="bangla.svg" class="image" alt="sf" style="margin-left:10%; margin-top:3%" />
+                <img src="marathi.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
+                <img src="japanese.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
             </div>
             <!--<div>
             <img src="malayalam.svg" class="image" alt="sf" style="margin-left:32%; margin-top:3%" />
@@ -94,7 +94,7 @@
 
     <div class="text">
         <div>
-            <img src="svg_files/ll_logo_faq.svg" class="logo-img" />
+            <img src="ll_logo_faq.svg" class="logo-img" />
         </div>
         <h1>
             <p>
@@ -146,28 +146,28 @@
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="svg_files/faq1.svg" width="600" height="400" alt="faq">
+                    <img src="faq1.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="svg_files/faq2.svg" width="600" height="400" alt="faq">
+                    <img src="faq2.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="svg_files/faq3.svg" width="600" height="400" alt="faq">
+                    <img src="faq3.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="svg_files/faq4.svg" width="600" height="400" alt="faq">
+                    <img src="faq4.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
@@ -207,9 +207,9 @@
     </div>
     <div style="background: #f5f5f0; margin-top:2%;">
         <picture>
-            <img src="svg_files/da_vinci.svg" class="responsive slide-small-device" alt="lidarlionn" />
+            <img src="da_vinci.svg" class="responsive slide-small-device" alt="lidarlionn" />
             <!--<img src="slide06.png" class="responsive slide-large-device" style="width:100%; height: auto">-->
-            <img src="svg_files/da_vinci.svg" class="responsive slide-large-device" style="width:100%; height: auto">
+            <img src="da_vinci.svg" class="responsive slide-large-device" style="width:100%; height: auto">
         </picture>
     </div>
 
