--- a/faq.html
+++ b/faq.html
@@ -75,112 +75,112 @@
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ001.png" alt="faq">
+                <img src="LLFAQ001.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ002.png" alt="faq">
+                <img src="LLFAQ002.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ003.png" alt="faq">
+                <img src="LLFAQ003.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ004.png" alt="faq">
+                <img src="LLFAQ004.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ005.png" alt="faq">
+                <img src="LLFAQ005.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ006.png" alt="faq">
+                <img src="LLFAQ006.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ007.png" alt="faq">
+                <img src="LLFAQ007.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ008.png" alt="faq">
+                <img src="LLFAQ008.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ009.png" alt="faq">
+                <img src="LLFAQ009.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ0010.png" alt="faq">
+                <img src="LLFAQ0010.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ0011.png" alt="faq">
+                <img src="LLFAQ0011.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ0012.png" alt="faq">
+                <img src="LLFAQ0012.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ0013.png" alt="faq">
+                <img src="LLFAQ0013.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ0014.png" alt="faq">
+                <img src="LLFAQ0014.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ0015.png" alt="faq">
+                <img src="LLFAQ0015.png" alt="faq">
             </a>
         </div>
     </div>
     <div class="responsive">
         <div class="gallery">
             <a>
-                <img src="png_files/LLFAQ0016.png" alt="faq">
+                <img src="LLFAQ0016.png" alt="faq">
             </a>
         </div>
     </div>
