--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </h1>
         <!--<hr class="uline" />-->
         <p style="text-align:center; margin-top:3%; color: rgba(0,0,0,0.6); font-family: monospace; font-size: 3vw">100 Experts</p>
-        <img src="svg_files/arrows.svg" style="margin-left: 49%; margin-top: 1%; width:1.8%; height: auto;" />
+        <img src="arrows.svg" style="margin-left: 49%; margin-top: 1%; width:1.8%; height: auto;" />
         <p style="text-align:center; margin-top:1%; color: rgba(0,0,0,0.6); font-family: monospace; font-size: 3vw">20 Experts + 80 amateurs</p>
 
         <p style="text-align:center; margin-top:1%; color: rgba(0,0,0,0.55); font-family: sans-serif; font-size: 2.5vw">
