--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
         <p style="text-align:center; margin-top:1%; color: rgba(0,0,0,0.55); font-family: sans-serif; font-size: 2.5vw">
             Giving jobs to <b>undergraduates</b> studied at local medium schools
         </p>
-        <div style="background:rgb(246,157,1); height: 11vw; width: 100%; margin: auto; margin-top: 2.5%">
-            <p style="text-align:center; font-size:2.3vw; color:white; padding: 1.5%; font-family: sans-serif;">
-                Computer literacy is not important. Only common sense is expected!. <br />We only gather team members when we
+        <div style="background:rgba(184,230,243,0.5); height: 11vw; width: 100%; margin: auto; margin-top: 2.5%">
+            <p style="text-align:center; font-size:2.3vw; color:rgb(22,68,80);; padding: 1.5%; font-family: sans-serif;">
+                "Computer literacy is not important. Only common sense is expected!. <br />We only gather team members when we
                 sign contract with our customers in Sweden.”<br /> – Bipin Kumar, GM GIS operations, Mega Tech, Bengaluru
             </p>
         </div>
@@ -139,35 +139,35 @@
     <br />
     <div id="faq">
         <div>
-            <h1 style="color: rgb(27, 143, 129); text-align: center; font-family: sans-serif">
+            <h1 style="color: rgba(41,50,52,0.9); text-align: center; font-family: sans-serif">
                 Frequently Asked Questions
             </h1>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="faq1.svg" width="600" height="400" alt="faq">
+                    <img src="faq11.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="faq2.svg" width="600" height="400" alt="faq">
+                    <img src="faq12.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="faq3.svg" width="600" height="400" alt="faq">
+                    <img src="faq13.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="faq4.svg" width="600" height="400" alt="faq">
+                    <img src="faq14.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
