change the video into low quality video

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="home" class="video-container">
 
         <video autoplay loop class="video-background" muted plays-inline>
-        <source src="home_page_video(normal_quality).webm" type="video/webm">
+        <source src="webpagevideo(low_quality).webm" type="video/webm">
     </video>
         <!--<iframe class="video-background"
              src="https://www.youtube.com/embed/oX04g3XSMNM?showinfo=0;controls=0;autoplay=1;playlist=oX04g3XSMNM&loop=1" autoplay="autoplay">
