--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74257275-2"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-74257275-2');
@@ -20,9 +20,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link type="text/css" href="style.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(window).scroll(function () {
+                if ($(window).scrollTop() > 300) {
+                    $('i').css({
+                        "opacity": "1", "pointer-events": "auto"
+                    });
+                }
+                else {
+                    $('i').css({
+                        "opacity": "0", "pointer-events": "none"
+                    });
+                }
+            });
+            $('i').click(function () {
+                $('html').animate({ scrollTop: 0 }, 500);
+            });
+        });
+    </script>
 
 </head>
 <body style="color:#f69d01; background-color: rgba(251, 212, 148,0.0)">
+    <i class="fas fa-chevron-up"></i>
 
     <div class="navbar">
         <ul class="nav">
@@ -38,26 +60,13 @@
     <div id="home" class="video-container">
 
         <video autoplay loop class="video-background" muted plays-inline>
-        <source src="webpagevideo(low_quality).webm" type="video/webm">
-    </video>
-        <!--<iframe class="video-background"
-             src="https://www.youtube.com/embed/oX04g3XSMNM?showinfo=0;controls=0;autoplay=1;playlist=oX04g3XSMNM&loop=1" autoplay="autoplay">
-        </iframe>-->
+            <source src="webpagevideo(low_quality).webm" type="video/webm">
+        </video>
         <div class="overlay-desc">
-            <h1 class="text-over-video" style="font-size:1.8vw">Geospatial mapping simplified</h1>
-            <!--<h1 align="left"; class="text-over-video" >Enabling millions for geospatial jobs. A billion$ market is now accessible to<br />millions of undergraduates</h1>-->
+            <h1 class="text-over-video" style="font-size:1.8vw">Geospatial mapping simplified</h1>           
         </div>
 
     </div>
-
-    <!--<div>
-        <p style="color:gray; font-size:3.3vw;text-align:center; font-family:Arial">
-            enabling millions for <b>geospatial</b> jobs<br />
-            &nbsp a <b>billion$</b> market <sub><sub>is now accessible to</sub></sub><br />
-            <b>millions</b> of undergraduates<br />
-        </p>
-    </div>-->
-
     <div>
         <br />
         <br />
@@ -80,9 +89,6 @@
                 <img src="marathi.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
                 <img src="japanese.svg" class="image" alt="sf" style="margin-left:13%; margin-top:3%" />
             </div>
-            <!--<div>
-            <img src="malayalam.svg" class="image" alt="sf" style="margin-left:32%; margin-top:3%" />
-            <img src="-japanese.svg" class="image" alt="sf" style="margin-left:16%; margin-top:3%" />-->
         </div>
         <div>
             <p style="color:rgba(0,0,0,0.55); font-size:2.6vw; text-align:center; font-family:Helvetica; margin-left:10px;">
@@ -208,11 +214,9 @@
     <div style="background: #f5f5f0; margin-top:2%;">
         <picture>
             <img src="da_vinci.svg" class="responsive slide-small-device" alt="lidarlionn" />
-            <!--<img src="slide06.png" class="responsive slide-large-device" style="width:100%; height: auto">-->
             <img src="da_vinci.svg" class="responsive slide-large-device" style="width:100%; height: auto">
         </picture>
     </div>
-
 
 </body>
 </html>
