added new index

--- a/index.html
+++ b/index.html
@@ -59,11 +59,14 @@
 
     <div id="home" class="video-container">
 
-        <video autoplay loop class="video-background" muted plays-inline>
-            <source src="webpagevideo(low_quality).webm" type="video/webm">
+        <!--<video autoplay loop class="video-background" muted plays-inline poster="homwpage_video.webm">
+            <source data-src="homepage_video.webm" type="video/webm">
+        </video>-->
+        <video autoplay loop class="video-background" muted plays-inline">
+            <source src="homepage_video.webm" type="video/webm">
         </video>
         <div class="overlay-desc">
-            <h1 class="text-over-video" style="font-size:1.8vw">Geospatial mapping simplified</h1>           
+            <h1 class="text-over-video" style="font-size:1.8vw">Geospatial mapping simplified</h1>
         </div>
 
     </div>
@@ -152,28 +155,28 @@
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="faq11.svg" width="600" height="400" alt="faq">
+                    <img src="faq01.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="faq12.svg" width="600" height="400" alt="faq">
+                    <img src="faq02.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="faq13.svg" width="600" height="400" alt="faq">
+                    <img src="faq03.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
         <div class="responsive-cards">
             <div class="gallery">
                 <a href="faq.html">
-                    <img src="faq14.svg" width="600" height="400" alt="faq">
+                    <img src="faq04.svg" width="600" height="400" alt="faq">
                 </a>
             </div>
         </div>
