--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul class="nav">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#faq">FAQ</a></li>
-            <li><a href="#contact">Contac</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
     <div id="home">
